--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -13,6 +13,7 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    
 
     steps:
     - uses: actions/checkout@v3
@@ -42,6 +43,41 @@ jobs:
       run: docker build -t hajaraburmeileh/simplecalc:${{ github.sha }} -t hajaraburmeileh/simplecalc:latest .
     - name: Publish Docker image
       run: docker push hajaraburmeileh/simplecalc --all-tags
+
+  azure:
+    runs-on: ubuntu-latest
+    needs: docker
+    env:
+      env-file: my-environment-file.env
+      CLUSTER_NAME: simplecalccluser
+      RESOURSE_GROUP: hajarscalc    
+    
+    steps:
+
+      - uses: actions/checkout@v3
+      - uses: azure/login@v1
+        name: Azure login
+        with:
+          creds: ${{secrets.AZURE_CREDENTIALS}}
+
+      - uses: azure/use-kubelogin@v1
+        name: Set up kubelogin for non-interactive login
+        with:
+          kubelogin-version: v0.0.25
+      - uses: azure/aks-set-context@v3
+        name: Get K8s context
+        with:
+          admin: "false"
+          cluster-name: ${{ env.CLUSTER_NAME }}
+          resource-group: ${{ env.RESOURSE_GROUP }}
+          use-kubelogin: "true"
+          
+      - uses: Azure/k8s-deploy@v1
+        with:
+          manifests: |
+            kubernetes/deploy.yml
+          images: |
+            hajaraburmeileh/simplecalc:${{ github.sha }}
     
    
 
