--- a/kubernetes/deploy.yml
+++ b/kubernetes/deploy.yml
@@ -1,22 +1,22 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nginx
+  name: simplecalccluser
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: nginx
+      app: simplecalccluser
   template:
     metadata:
       labels:
-        app: nginx
+        app: simplecalccluser
     spec:
       nodeSelector:
         "kubernetes.io/os": linux
       containers:
-      - name: nginx
-        image: hajaraburmeileh/simplecalc:latest
+      - name: simplecalccluser
+        image: jtamimi/password-generator:latest
         ports:
         - containerPort: 8080
         resources:
@@ -32,10 +32,10 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: nginx
+  name: simplecalccluser
 spec:
   type: LoadBalancer
   ports:
   - port: 8080
   selector:
-    app: nginx
+    app: simplecalccluser
